--- a/mainpage.html
+++ b/mainpage.html
@@ -47,7 +47,7 @@ font-size:30px;}
   <body>
       <div class="warm-up">Warm-up</div>
       <div class="Interview"><a href="http://127.0.0.1:5500/%3C!DOCTYPE%20html%3E.html">Interview with classmate</div></a>
-      <div class="Questionnare"><a href="http://127.0.0.1:5500/Assignment1/index.html">Questionnare</a></div>
+      <div class="Questionnare"><a href="http://127.0.0.1:5500/index.html">Questionnare</a></div>
       <div class="Project">Project</div>
       <div class="Assignment1"><a href="http://127.0.0.1:5500/Assignment1/mainpage.html">Assignment1</a></div>
       
