--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ HTML is the place where you can edit texts and images on the website.
 10. Embed a video of your choice from YouTube or Vimeo.
 <br/>
 <br/>
-  <a href="https://www.youtube.com/watch?v=dNJdJIwCF_Y">Link to Youtube</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dNJdJIwCF_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/>
 <br/>
 11. Please embed this image of a database that lives inside a nuclear bunker in Switzerland on the page:
