--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
     <title>Hello World!</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
@@ -21,7 +21,7 @@ top:200px;
 left:10px;
 color:black;}
 .Questionnare{position:absolute;
-top:300px;
+top:350px;
 left:10px;}
 .Assignment1{position:absolute;
 top:200px;
@@ -38,7 +38,23 @@ a {
 a:hover{color: hotpink;
   text-decoration: none;
 font-size:30px;}
-
+.Research{position:absolute;
+top:150px;
+left:1190px;
+font-size:20px;
+font-weight: bold;}
+.description1{position:absolute;
+top:250px;
+left:10px;
+color:black;}
+.description2{position:absolute;
+top:400px;
+left:10px;
+color:black;}
+.description3{position:absolute;
+top:250px;
+left:600px;
+color:black;}
 
 
   </style>
@@ -47,8 +63,11 @@ font-size:30px;}
   <body>
       <div class="warm-up">Warm-up</div>
       <div class="Interview"><a href="http://127.0.0.1:5500/%3C!DOCTYPE%20html%3E.html">Interview with classmate</div></a>
+      <div class="description1">In this small exercise, we were asked to interview our classmates <br/>about each other's screen time.</div>
       <div class="Questionnare"><a href="http://127.0.0.1:5500/index.html">Questionnare</a></div>
+      <div class="description2">Answer questions about what we've learnt about html, css and <br/>javascript.</div>
       <div class="Project">Project</div>
       <div class="Assignment1"><a href="http://127.0.0.1:5500/Assignment1/mainpage.html">Assignment1</a></div>
-      
+      <div class="description3">In this project, we have to use different platforms to <br/>tell a story smoothly.</div>
+      <div class="Research">Research</div>
   </body>
