--- a/Project2/Part1.html
+++ b/Project2/Part1.html
@@ -15,6 +15,6 @@
   <li>Creative</li>
   <li>Start with an interesting hook</li>
   <li>Funky sort of rhythm</li>
-  <li>Organized</li>
+  <li>Weird but making sense</li>
 </ul>
   </html>
