--- a/Project2/Part1.html
+++ b/Project2/Part1.html
@@ -10,7 +10,7 @@
   <li>Unique Perspective</li>
   <li>Logical</li>
   <li>Appealing</li>
-  <li>Breathleess</li>
+  <li>Breathless</li>
   <li>Vivid metaphor</li>
   <li>Creative</li>
   <li>Start with an interesting hook</li>
