--- a/Assignment2/assignment2(1).html
+++ b/Assignment2/assignment2(1).html
@@ -151,7 +151,9 @@ font-weight: lighter;}
 <body>
     <section>
         <div class="title">DAUBENTON</div>
-        <p class="description">Daubenton is a serif font designed by Olivier Dolbeau. Daubenton is a <br/><br/>revival of the engraved letters of the façade of the Great Evolution <br/><br/>Gallery of the Natural History Museum in Paris. Daubenton was the <br/><br/>name of the first director of the Museum.</p>
+        <p class="description">This typeface was designed with the Tarot de Marseille in mind. <br/><br/>This led to a funny blend of medieval-ish and cooperblack-ish typeface.
+
+          <br/><br/>The Basteleur Arcana represents a lot of things a designer can experience: new beginnings, <br/><br/>having fun, crafting, but also a lack of confidence and having hard time to finish projects.</p>
       </section>
       <section>
         <div class="container reveal">
