--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="description1">In this small exercise, we were asked to interview our classmates <br/>about each other's screen time.</div>
       <div class="Questionnare"><a href="http://127.0.0.1:5500/index.html">Questionnare</a></div>
       <div class="description2">Answer questions about what we've learnt about html, css and <br/>javascript.</div>
-      <div class="Project">Project</div>
+      <div class="Project">Assignment</div>
       <div class="Assignment1"><a href="http://127.0.0.1:5500/Assignment1/mainpage.html">Assignment1</a></div>
       <div class="description3">In this project, we have to use different platforms to <br/>tell a story smoothly.</div>
       <div class="Research">Research</div>
