--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="warm-up">Warm-up</div>
       <div class="Interview"><a href="https://yuntongchen.github.io/warm-up/%3C!DOCTYPE%20html%3E.html">Interview with classmate</div></a>
       <div class="description1">In this small exercise, we were asked to interview our classmates <br/>about each other's screen time.</div>
-      <div class="Questionnare"><a href="YuntongChen.github.io/warm-up/Questionnaire.html">Questionnare</a></div>
+      <div class="Questionnare"><a href="https://yuntongchen.github.io/warm-up/Questionnaire.html">Questionnare</a></div>
       <div class="description2">Answer questions about what we've learnt about html, css and <br/>javascript.</div>
       <div class="Project">Assignment</div>
       <div class="Assignment1"><a href="http://127.0.0.1:5500/Assignment1/mainpage.html">Assignment1</a></div>
