--- a/Assignment2/assignment2(2).html
+++ b/Assignment2/assignment2(2).html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 </head>
 <style>
+@font-face{ font-family: 'MyWebFont'; src: url('WebFont.eot'); src: url('WebFont.eot?#iefix') format('embedded-opentype'), url('WebFont.woff') format('woff'), url('WebFont.ttf') format('truetype'), url('WebFont.svg#webfont') format('svg'); }
 *{
   margin: 0;
   padding: 0;
