--- a/Assignment2/assignment2(2).html
+++ b/Assignment2/assignment2(2).html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <style>
-@font-face{ font-family: 'MyWebFont'; src: url('WebFont.eot'); src: url('WebFont.eot?#iefix') format('embedded-opentype'), url('WebFont.woff') format('woff'), url('WebFont.ttf') format('truetype'), url('WebFont.svg#webfont') format('svg'); }
+@font-face{ font-family: 'Daubenton'; src: url('Daubenton.eot'); src: url('Daubenton.eot?#iefix') format('embedded-opentype'), url('Daubenton.woff') format('woff'), url('Daubenton.ttf') format('truetype'), url('Daubenton.svg#webfont') format('svg'); }
 *{
   margin: 0;
   padding: 0;
