--- a/Assignment2/assignment2(2).html
+++ b/Assignment2/assignment2(2).html
@@ -3,7 +3,15 @@
 <head>
 </head>
 <style>
-@font-face{ font-family: 'Daubenton'; src: url('Daubenton.eot'); src: url('Daubenton.eot?#iefix') format('embedded-opentype'), url('Daubenton.woff') format('woff'), url('Daubenton.ttf') format('truetype'), url('Daubenton.svg#webfont') format('svg'); }
+
+@font-face {
+    font-family: 'daubenton_regular';
+    src: url('daubentonwebfont-webfont.woff2') format('woff2'),
+         url('daubentonwebfont-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 *{
   margin: 0;
   padding: 0;
