--- a/Assignment2/assignment2(2).html
+++ b/Assignment2/assignment2(2).html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello World!</title>
+    <link rel="stylesheet" href="/assignment2(2).css" />
+    <script src="/script.js" defer></script>
 </head>
 <style>
-
-@font-face {
+  @font-face {
     font-family: 'daubenton_regular';
     src: url('daubentonwebfont-webfont.woff2') format('woff2'),
          url('daubentonwebfont-webfont.woff') format('woff');
