--- a/Assignment2/assignment2(2).html
+++ b/Assignment2/assignment2(2).html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello World!</title>
-    <link rel="stylesheet" href="/assignment2(2).css" />
+    <link rel="stylesheet" href="/assignment2.css" />
     <script src="/script.js" defer></script>
 </head>
 <style>
