--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <div class="Assignment1"><a href="http://127.0.0.1:5500/Assignment1/mainpage.html">Assignment1</a></div>
       <div class="description3">In this project, we have to use different platforms to <br/>tell a story smoothly.</div>
       <div class="Research">Research</div>
-      <div class="Assignment2"><a href="https://yuntongchen.github.io/Assignment2/assignment2(2).html">Assignment2</div></a>
+      <div class="Assignment2"><a href="https://yuntongchen.github.io/Assignment2/assignment2.html">Assignment2</div></a>
       <div class="description4">In this Assignment, we were asked to create our own typeface <br/>speciement including character set and different sizes, styles <br/>and weight of the font.</div>
   </body>
