--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <html>
 <head>
   <meta charset="utf-8" />
@@ -12,15 +11,14 @@
 </head>
 <style>
   body{
-				font-family: 'daubenton_regular';
-							}
+	font-family: 'daubenton_regular';
+			}
   @font-face {
     font-family: 'daubenton_regular';
     src: url('daubentonwebfont-webfont.woff2') format('woff2'),
          url('daubentonwebfont-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 *{
   margin: 0;
