--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<html lang="en">
 <html>
 <head>
   <meta charset="utf-8" />
@@ -10,13 +8,10 @@
     <script src="/script.js" defer></script>
 </head>
 <style>
-  body{
-	font-family: 'daubenton_regular';
-			}
   @font-face {
     font-family: 'daubenton_regular';
-    src: url('daubentonwebfont-webfont.woff2') format('woff2'),
-         url('daubentonwebfont-webfont.woff') format('woff');
+    src: url('assignment2fonts/daubentonwebfont-webfont.woff2') format('woff2'),
+         url('assignment2fonts/daubentonwebfont-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,7 +19,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:Daubenton;
+  font-family:daubenton_regular;
   background-color: #fcfbfa;
 }
 section{
