--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -20,6 +20,7 @@
   padding: 0;
   box-sizing: border-box;
   background-color: #fcfbfa;
+  font-family:daubenton_regular;
 }
 section{
   min-height: 120vh;
