--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -87,7 +87,7 @@ width:1000px;}
 .title{position:absolute;
     font-size:85px;
     left:780px;
-    font-family:Daubenton;
+    font-family:daubenton_regular;
 top:50px;
 color:#dcb7b3;}
 .description{position:absolute;
