--- a/Project2/Part3.html
+++ b/Project2/Part3.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <link rel="stylesheet" href="/Part3.css" />
+    <script src="/Part3.js" defer></script>
+</head>
 <style>
-
+@font-face {
+    font-family: 'resistanceregular';
+    src: url('font/resistance_generale-webfont-webfont.woff2') format('woff2'),
+         url('font/resistance_generale-webfont-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+.title{position:absolute;
+    top:100px;
+font-size:30px;
+font-family:resistanceregular;}
+.title:hover{position:absolute;
+font-size:40px;
+font-family:'Times New Roman', Times, serif;}
+.text{position:absolute;
+top:200px;
+    font-size:20px;}
 
 </style>
 <body>
-<div class="text"></div>
+    <div class="title">On Punctuatoin</div>
+<div class="text">There are some punctuations that are interesting and there are some punctuations that are not. Let us begin with the punctuations that are not. Of these the one but the first and the most the completely most uninteresting is the question mark. The question mark is alright when it is all alone when it is used as a brand on cattle or when it could be used in decoration but connected with writing it is completely entirely completely uninteresting. It is evident that is you ask a question you ask a question but anybody who can read at all knows when a question is a question as it is written in writing. Therefore I ask you therefore wherefore should one use the question mark. Beside it does not in its form go with ordinary printing and so it pleases neither the eye nor the ear and it is therefore like a noun, just an unnecessary name of something. A question is a question, anybody can know that a question is a question and so why add to it the question mark when it is already there when the question is already there in the writing. Therefore I never could bring myself to use a question mark, I always found it positively revolting, and now very few do use it. Exclamation marks have the same difficulty and also quotation marks, they are unnecessary, they are ugly, they spoil the line of the writing or the printing and anyway what is the use, if you do not know that a question is a question what is the use of its being a question. The same thing is true of a quotation. When I first began writing I found it simply impossible to use question marks and quotation marks and exclamation points and now anybody sees it that way. Perhaps some day they will see it some other way but not at any rate anybody can and does see it that way.
+</div>
 </body>
 <script>
 
