--- a/Project2/Part4.html
+++ b/Project2/Part4.html
@@ -12,7 +12,6 @@
     font-weight: normal;
     font-style: normal;
 }
-body{background-color: black;}
 .title{position:absolute;
     top:50px;
 font-size:30px;
@@ -41,20 +40,7 @@ left:400px;}
     width: 170px;
 	height: 150px;
 	transform: skew(10deg);
-	background: rgba(255, 255, 255, 0.38);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
-/* From https://css.glass */
-background: rgba(255, 255, 255, 0.38);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
-
+	background:#002dd2;
 }
 
 #mydivheader {
@@ -70,7 +56,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 <body>
     <div id="mydiv">
         <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-        <div id="mydivheader"><img style="width:200px; position:absolute; left:1200px; top:550px;" src="https://cdn.glitch.global/b92cf685-dae6-462e-b12f-1326a43792d9/glasses%20mini.png?v=1645496966329"></div>
+        <div id="mydivheader"></div>
       </div>
     <div class="square"></div>
     <div class="title">On Punctuatoin</div>
