--- a/Project2/Part4(4).html
+++ b/Project2/Part4(4).html
@@ -13,7 +13,7 @@
 }
 body{font-family: 'Noto Sans', sans-serif;}
 .title{position:absolute;
-    top:150px;
+    top:155px;
 font-size:30px;
 font-family:resistanceregular;
 left:950px;
@@ -24,7 +24,7 @@ top:200px;
 .box{position:absolute;
     height:800px;
     width:550px;
-    left:200px;
+    left:220px;
 top:50px;
 font-family: 'Noto Sans', sans-serif;}
 .miniglasses{position:absolute;
@@ -35,9 +35,9 @@ left:400px;}
     position:absolute;
     top:250px;
     left:500px;
-	width: 300px;
-  height: 300px;
-  background: #728a2a;
+	width: 250px;
+  height: 250px;
+  background: #a7b8c9;
   border-radius: 50%
 }
 
@@ -51,28 +51,40 @@ left:400px;}
 border-style: none;
 border-radius:10%;}
 #toBlue{position:absolute;
-top:680px;
+top:700px;
 background-color:#a7b8c9;
 width:55px;
   height:18px;}
 #toOrgange{position:absolute;
-top:650px;
+top:700px;
 left:80px;
 width:55px;
-  height:18px;}
+height:18px;
+background-color:#dca880;}
 #toRed{position:absolute;
 top:700px;
-left:160px;
+left:780px;
 width:55px;
-  height:18px;}
-#toBlue{position:absolute;
+height:18px;
+background-color:#d74d24;}
+#toKleinblue{position:absolute;
 top:700px;
+left:860px;
 width:55px;
-  height:18px;}
-#toBlue{position:absolute;
+height:18px;
+background-color:#002dd2;}
+#toBrown{position:absolute;
 top:700px;
+left:940px;
 width:55px;
-height:18px;}
+height:18px;
+background-color:#57342f;}
+#toGreen{position:absolute;
+top:700px;
+left:1020px;
+width:55px;
+height:18px;
+background-color:#728a2a;}
 .Kleinblue{color:#002dd2;}
 .yellow{color:#ebf298;}
 .purple{color:#836aa5;}
@@ -86,11 +98,11 @@ height:18px;}
 </style>
 <body>
     <div id="toBlue"></div>
-    <div id="toGreen">Green</div>
-    <div id="toRed">Red</div>
-    <div id="toOrgange">Orange</div>
-    <div id="toBrown">Brown</div>
-    <div id="toKleinblue">Klein Blue</div>
+    <div id="toGreen"></div>
+    <div id="toRed"></div>
+    <div id="toOrgange"></div>
+    <div id="toBrown"></div>
+    <div id="toKleinblue"></div>
 
     <div class="title"><span class="green">On</span> <span class="red">Pun</span><span class="brown">ctu</span><span class="orange">a</span><span class="blue">t</span>i<span class="green">on</span></div>
 
@@ -99,7 +111,7 @@ height:18px;}
         <div id="mydivheader" onclick="clickCircleChangeColor()"></div>
       </div>
    <div class="box"><div style="height:600px;width:500px;border:1px solid transparent;font:16px/26px 'Noto Sans', sans-serif;overflow:auto;">
-        <span class="Kleinblue">There are some </span><span class="yellow">punctuations</span> <span class="purple">that are interesting</span><span class="Kleinblue"> and there are</span> <span class="brown">some punctuations that are</span><span class="white"> not.</span><span class="blue">Let us begin with</span> <span class="yellow">the punctuations that are n</span><span class="white">o</span><span class="yellow">t.</span> <span class="middleblue">Of these the one</span><span class="brown"> but</span><span class="green"> the first</span><span class="red"> and the mo</span><span class="white">s</span><span class="red">t</span> <span class="blue">the com</span><span class="white">ple</span><span class="blue">tely most</span> <span class="orange">unin</span><span class="white">ter</span><span class="orange">esting</span> <span class="middleblue">is the</span><span class="yellow"> ques</span><span class="white">ti</span><span class="yellow">on mark.</span> The question mark is alright when it is all alone when it is used as a brand on cattle or when it could be used in decoration but connected with writing it is completely entirely completely uninteresting. It is evident that is you ask a question you ask a question but anybody who can read at all knows when a question is a question as it is written in writing. Therefore I ask you therefore wherefore should one use the question mark. Beside it does not in its form go with ordinary printing and so it pleases neither the eye nor the ear and it is therefore like a noun, just an unnecessary name of something. A question is a question, anybody can know that a question is a question and so why add to it the question mark when it is already there when the question is already there in the writing. Therefore I never could bring myself to use a question mark, I always found it positively revolting, and now very few do use it. Exclamation marks have the same difficulty and also quotation marks, they are unnecessary, they are ugly, they spoil the line of the writing or the printing and anyway what is the use, if you do not know that a question is a question what is the use of its being a question. The same thing is true of a quotation. When I first began writing I found it simply impossible to use question marks and quotation marks and exclamation points and now anybody sees it that way. Perhaps some day they will see it some other way but not at any rate anybody can and does see it that way. So there are the uninteresting things in punctuation uninteresting in a way that is perfectly obvious, and so we do not have to go any farther into that. There are besides dashes and dots, and these might be interesting spaces might be interesting. They might if one felt that way about them. 
+        <span class="Kleinblue">There are some </span><span class="yellow">punctuations</span> <span class="purple">that are interesting</span><span class="Kleinblue"> and there are</span> <span class="brown">some punctuations that are</span><span class="white"> not.</span><span class="blue">Let us begin with</span> <span class="yellow">the punctuations that are n</span><span class="white">o</span><span class="yellow">t.</span> <span class="middleblue">Of these the one</span><span class="brown"> but</span><span class="green"> the first</span><span class="red"> and the mo</span><span class="white">s</span><span class="red">t</span> <span class="blue">the com</span><span class="white">ple</span><span class="blue">tely most</span> <span class="orange">unin</span><span class="white">ter</span><span class="orange">esting</span> <span class="middleblue">is the</span><span class="yellow"> ques</span><span class="white">ti</span><span class="yellow">on mark.</span> <span class="middleblue">The</span><span class="red"> que</span><span class="white">st</span><span class="green">ion mark</span><span class="purple"> is alright</span><span class="middkeblue"> when it is all a</span><span class="blue">l</span><span class="white">on</span><span class="middleblue"> when it is used as</span><span class="brown"> a brand on cattle</span><span class="Kevinblue"> or when it</span><span class="green"> could b</span> <span class="white">e</span><span class="blue"> used</span> <span class="brown">in decor</span><span class="white">at</span><span class="brown">ion</span><span class="Kevinblue"> but</span>  <span class="orange">connected with writing</span><span class="blue"> it is comp</span><span class="white">let</span><span class="blue">ely</span> <span class="brown">en</span><span class="red">t</span><span class="white">ir</span><span class="red">ely</span> <span class="white">com</span><span class="green">pletely</span> <span class="yellow">uninteresting.</span> <span class="Kleinblue"></span><span class="middleblue">It is ev</span><span class="white">iden</span><span class="middleblue">t that is you</span> <span class="Kleinblue">ask a ques</span><span class="middleblue">tion</span> <span class="orange">you ask</span><span class="green"> a question but a</span><span class="yellow">nyb</span><span class="red">ody</span> <span class="blue">who can read at</span> <span class="white">all know</span> <span class="orange">when a question</span> <span class="purple">is a question</span> <span class="red">as it is wr</span><span class="white">it</span><span class="red">ten in writing.</span> Therefore <span class="green">I ask you</span> <span class="white">therefore wherefore</span> <span class="purple">should one</span> <span class="orange">use the question mark.</span> Beside <span class="blue">it d</span><span class="white">oe</span><span class="blue">s not</span> <span class="yellow">in its form</span> <span class="Kleinblue">go with ordinary printing</span> <span class="middleblue">and so</span> <span class="brown">it pleases nei</span><span class="green">ther the eye</span> <span class="red">nor the <span class="white">e</span>ar</span> <span class="Kleinblue">and it is</span> therefore <span class="orange">like a n</span><span class="white">o</span><span class="red">un,</span> <span class="blue">just an un</span><span class="yellow">nec</span><span class="blue">essary name of something.</span> <span class="purple">A question</span> <span class="red">i</span><span class="white">s</span> <span class="red">a question,</span> <span class="purple">anybody can know that</span> <span class="orange">a question is a question</span> and so <span class="green">why add to it</span> <span class="red">the question m</span><span class="white">ar</span><span class="red">k</span> <span class="brown">when it is already</span> <span class="blue">there when the question is al</span><span class="white">rea</span><span class="middleblue">dy there</span> <span class="purple">in the writing.</span> Therefore <span class="yellow">I never could</span> <span class="middleblue">bring myself to use</span> <span class="white">a question mark</span><span class="Kleinblue">, I always found it positively re</span><span class="white">vo</span><span class="Kleinblue">lting,</span> <span class="orange">and now</span> <span class="brown">very f</span><span class="white">ew</span> <span class="brown">do use it.</span> <span class="red">Exclamation marks</span> <span class="green">have the s</span><span class="white">a</span><span class="green">me difficulty</span> <span class="purple">and also quotation marks,</span> <span class="middleblue">they are unnecessary,</span> <span class="yellow">they are ugly,</span> <span class="green">they</span> <span class="red">spoil</span> <span class="orange">the line of the writing</span> <span class="blue">or the printing</span> <span class="red"></span>and anyway</span> <span class="white">what</span> <span class="brown">is the use,</span> if you <span class="purple">do not know</span> <span class="orange">that</span> <span class="red">a question is a question</span> <span class="yellow">what is the use of</span> <span class="brown">its being a</span> <span class="white">qu</span><span class="brown">estion.</span> <span class="green">The same thing</span> <span class="orange">is true</span> <span class="purple">of a quo</span><span class="white">ta</span><span class="green">tion.</span> <span class="purple">When I</span> <span class="yellow">first began</span> <span class="blue">writing</span> <span class="brown">I found it</span> <span class="Kleinblue">simply impo</span><span class="white">ss</span><span class="Kleinblue">ible</span> <span class="purple">to use question marks</span> and quotation marks and exclamation points and now anybody sees it that way. Perhaps some day they will see it some other way but not at any rate anybody can and does see it that way. So there are the uninteresting things in punctuation uninteresting in a way that is perfectly obvious, and so we do not have to go any farther into that. There are besides dashes and dots, and these might be interesting spaces might be interesting. They might if one felt that way about them. 
 
 One other little punctuation mark one can have feelings about and that is the apostrophe for possession. Well feel as you like about that, I can see and I do see that for many that for some the possessive case apostrophe has a gentle tender insinuation that makes it very difficult to definitely decide to do without it. One does do without it, I do, I mostly always do, but I cannot deny that from time to time I feel myself having regrets and from time to time I put it in to make the possessive case. I absolutely do not like it and leaving it out I feel no regret, there it is unnecessary and not ornamental but inside a word and its s well perhaps, perhaps it does appeal by its weakness to your weakness. At least at any rate from time to time I do find myself letting it alone if it has come in and sometimes it has come in. I cannot positively deny but that I do from time to time let it come in. 
 
