--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
       <div class="Research">Research</div>
       <div class="Assignment2"><a href="https://yuntongchen.github.io/Assignment2/assignment2.html">Assignment2</div></a>
       <div class="description4">In this Assignment, we were asked to create our own typeface <br/>speciement including character set and different sizes, styles <br/>and weight of the font.</div>
+      <div class="Assignment3">Assignment3</div>
   </body>
