--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -40,9 +40,25 @@ border:20px;
 margin:30px;
 color:white;
 top:900px;
-left:1000px;}
+left:900px;}
 
+@media only screen and (max-width: 382px) {
+  /* For mobile phones: */
+  [class*="detailcontainer"] {
+    width: 100%;
+  top:50px;
+left:50px;
+font-size:25px;z-index: -1;}
+}
 
+@media only screen and (max-width: 532px) {
+  /* For mobile phones: */
+  [class*="detailcontainer"] {
+    width: 100%;
+  top:50px;
+left:50px;
+font-size:25px;z-index: -1；}
+}
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
@@ -53,15 +69,6 @@ left:500px;
 font-size:20px;}
 }
 
-
-@media only screen and (max-width: 900px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:500px;
-left:550px;
-font-size:20px;}
-}
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
