--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -4,85 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hello World!</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/Assignment3/assignment3.css" />
 
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
-  <style>
-body{height:700px;}
-img{position:absolute;
-  top:0px;
-  left:0px;
-  max-width:150%;
-  height: auto;}
-.container{
-padding: 20px 1em 0 2em;
-border:20px;
-font-size:100px;
-border:20px;
-margin:30px;
-color:white;
-position:fixed;}
-.descriptioncontainer{position:absolute;
-padding: 20px 1em 0 2em;
-border:20px;
-font-size:30px;
-border:20px;
-margin:30px;
-color:white;
-top:900px;}
-.detailcontainer{position:absolute;
-padding: 20px 1em 0 2em;
-border:20px;
-font-size:30px;
-border:20px;
-margin:30px;
-color:white;
-top:900px;
-left:900px;}
-
-@media only screen and (max-width: 382px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:50px;
-left:50px;
-font-size:25px;z-index: -1;}
-}
-
-@media only screen and (max-width: 532px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:50px;
-left:50px;
-font-size:25px;z-index: -1；}
-}
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="detailcontainer"] {
-    width: 100%;
-  top:450px;
-left:500px;
-font-size:20px;}
-}
-
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="descriptioncontainer"] {
-    width: 100%;
-  top:450px;
-left:0px;
-font-size:20px;}
-}
-
-
-
-
-  </style>
   <body>
     <img src="https://cdn.glitch.global/b92cf685-dae6-462e-b12f-1326a43792d9/ca-times.brightspotcdn.jpg?v=1645198596087">
     <div class="container">Soul</div>  
