--- a/Assignment4/Assignemnt4.html
+++ b/Assignment4/Assignemnt4.html
@@ -103,6 +103,7 @@ font-weight:bold
          background-color:rgb(255, 161, 175);
           font-size:15px;
           border-radius:50%;
+          text-transform: uppercase;
         }
         .logo .word .main-letter {
           
