--- a/Assignment4/Assignemnt4.html
+++ b/Assignment4/Assignemnt4.html
@@ -8,8 +8,8 @@
         
         @font-face {
     font-family: 'pilowlavaregular';
-    src: url('font/pilowlava-regular-webfont.woff2') format('woff2'),
-         url('font/pilowlava-regular-webfont.woff') format('woff');
+    src: url('./Font/pilowlava-regular-webfont.woff2') format('woff2'),
+         url('./Font/pilowlava-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -18,7 +18,6 @@
 position:absolute;
 font-size:20px;
 border-radius: 50px;
-font-family: pilowlavaregular;
 top:50%;
 left:30%;
 margin:10px;
@@ -30,7 +29,10 @@ font-weight:bold;
     border-width:5px;
     font-family:pilowlavaregular;
       }
-      .logo .word {
+      .logo.word {font-size:50px;
+    border-radius:5px;
+    border-width:5px;
+    font-family:pilowlavaregular;
 
       }
       .logo .word .main-letter {
