--- a/Assignment4/Assignemnt4.html
+++ b/Assignment4/Assignemnt4.html
@@ -35,8 +35,7 @@ font-weight:bold;
     font-family:pilowlavaregular;
 
       }
-      .logo .word .main-letter {
-      }
+      .logo .word .main-letter { }
       .logo .word .remaining-word {
         display: none;
       }
@@ -48,11 +47,11 @@ font-weight:bold;
           font-size:20px;
 
         }
-        .logo .word .main-letter {
+        .logo .word .main-letter {font-size:50px;
           
         }
         .logo {
-          padding: 0.5rem 1rem;
+          padding: 0.5rem 0.5rem;
         }
         .logo .word {
           padding-right: 0.8ch;
@@ -76,9 +75,9 @@ border-radius: 15px;
 color:black;
 top:50%;
 left:30%;
-font-weight:bold
+font-weight:bold;
         }
-        .logo .word .main-letter{}
+        .logo .word .main-letter{font-size:60px;}
         .logo {
           padding: 0.5rem 1rem;
         }
@@ -88,7 +87,7 @@ font-weight:bold
         .logo .word:last-child {
           padding-right: 0;
         }
-        .logo .word .remaining-word {
+        .logo .word .remaining-word {font-size:60px;
           display: inline-block;
         }
        
@@ -100,7 +99,7 @@ font-weight:bold
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
         .container {color:white;
          background-color:rgb(255, 161, 175);
           font-size:15px;
