--- a/Assignment5/Assignment5(2).html
+++ b/Assignment5/Assignment5(2).html
@@ -22,7 +22,7 @@ a:hover, a:active {
          url('font/typefesse_claire-obscure-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;}
-    body{background-color:#b1b3b7;font-family: 'Bodoni Moda', serif;}
+    body{background-color:black;font-family: 'Bodoni Moda', serif;}
 
     .Broadway{position:fixed;
 left:50px;
@@ -49,7 +49,7 @@ background-color:black;
 }
 .description{position:absolute;
 top:400px;
-left:450px;
+left:200px;
 color:#6cdc56;
 background-color:black;}
 </style>
