--- a/Assignment5/Assignment5(3).html
+++ b/Assignment5/Assignment5(3).html
@@ -6,7 +6,7 @@
     <style>
    a:link, a:visited {
   background-color:black;
-  color:#6cdc56;
+  color:#ea4ebf;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -42,7 +42,7 @@ color:#ea4ebf;
          url('font/typefesse_claire-obscure-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;}
-    body{background-color:#ecedf9;font-family: 'Bodoni Moda', serif;}
+    body{background-color:black;font-family: 'Bodoni Moda', serif;}
    
 .Broadway{position:absolute;
 left:680px;
