--- a/Assignment5/Assignment5(4).html
+++ b/Assignment5/Assignment5(4).html
@@ -4,10 +4,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
     </head>
     <style>
-        body{background-color:#b1b3b7;font-family: 'Bodoni Moda', serif;}
+        body{background-color:black;font-family: 'Bodoni Moda', serif;}
    a:link, a:visited {
   background-color:black;
-  color:#6cdc56;
+  color:#802331;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -78,10 +78,10 @@ height:35%;}
 .video:hover{filter: grayscale(0%);
 -webkit-filter: grayscale(0%);}
 
-.Broadway{position:fixed;
+.back{position:fixed;
 left:750px;
 top:650px;
-color:#6cdc56;
+color:#802331;
 background-color:black;}
 </style>
 <body>
@@ -91,7 +91,7 @@ background-color:black;}
 <img class="H" src="./Images/Phantom2.jpeg">
 <img class="A" src="./Images/Phantom3.jpeg">
 <div class="Aladdin">The Phantom of <br/>the Opera</div>  
-<div class="Broadway"><a href="./Assignment5.html">Back</div> </a>
+<div class="back"><a href="./Assignment5.html">Back</div> </a>
 <div class="description">The Phantom of the Opera is a musical with music by Andrew Lloyd Webber <br/>(who co-wrote the libretto alongside Richard Stilgoe) and lyrics by Charles Hart. <br/>It is based on the 1910 eponymous French novel by Gaston Leroux.
 
     <br/>The plot revolves around a beautiful soprano, Christine Daaé, who becomes the <br/>obsession of a mysterious, masked musical genius living in the subterranean <br/>labyrinth beneath the Paris Opéra House.</div> 
