--- a/Assignment5/Assignment5.html
+++ b/Assignment5/Assignment5.html
@@ -57,7 +57,8 @@ top:1900px;
 left:1000px;
 color:#6cdc56;
 font-style: italic;
-background-color:black;}
+background-color:black;
+opacity: 0;}
 .Lion2{position:absolute;
 top:2100px;
 left:1000px;
