--- a/Project3/Project3-Part3.html
+++ b/Project3/Project3-Part3.html
@@ -14,7 +14,7 @@
     <br/>
     <div class="question1">What is the context / story? What is the image collector’s intent, original idea / concept?</div>
     <br/>
-    <div class="answer1">This is a work collection of performance art. These images or the behaviors in it all look wierd at the begining but when look close into them, they are all thought-provoking and meaningful.</div>
+    <div class="answer1">This is a work collection of performance art. The way they behave in these photographs look wierd at first but what they tried to provoke are meaningful and thoughtful when looking closely.</div>
     <br/>
     <div class="question2">What is the content? Is there background / surroundings? Are they cropped, masked, clipped?</div>
     <br/>
@@ -27,7 +27,7 @@
     <div class="question4">Where do they come from? what is the source, the original artists, the book, the geographical region, time of day?
     </div>
     <br/>
-    <div class="answer4">Most of them from original artists and some older works are from magazines that introducing works and intentions of artists.</div>
+    <div class="answer4">Most of them are from original artists, with some older images are from magazines featuring artists' works and intentions.</div>
     <br/>
     <div class="question5">Do they have a material quality? scanned, photographed, painted, physical objects, processed, cropped in a certain way.</div>
     <br/>
@@ -64,5 +64,7 @@
         <br/>
         Innovative
         </div>
+
+
 
 </body>
