--- a/Project3/Project3-Part3.html
+++ b/Project3/Project3-Part3.html
@@ -7,6 +7,7 @@
     .title{font-size:30px;
     font-weight:bold;}
     .list{font-weight:bold;}
+    .reference{font-weight:bold;}
 </style>
 <body>
     <div class="title">Project3-Part3</div>
@@ -35,6 +36,7 @@
     <br/>
     <br/>
     <div class="list">10 words description</div>
+    <br/>
     <div class="word">Weird
         <br/>
         <br/>
@@ -64,6 +66,14 @@
         <br/>
         Innovative
         </div>
+        <br/>
+        <br/>
+        <div class="reference">Reference that are appropriate for this project</div>
+        <a href="http://www.benzank.com/9zzho7rzew1qrgo46rs2u9othk2r77">Link1</a>
+        <br/>
+        <br/>
+        <a href="http://www.elinabrotherus.com/">Link2</a>
+
 
 
 
