--- a/Project3/Project3-Part4.html
+++ b/Project3/Project3-Part4.html
@@ -7,18 +7,23 @@
     color:white;}
 .a{position:absolute;
     top:10px;
+    left:25px;
     font-size:30px;}
     .b{position:absolute;
     top:500px;
+    left:25px;
     font-size:30px;}
     .c{position:absolute;
     top:1050px;
+    left:25px;
     font-size:30px;}
     .d{position:absolute;
     top:1700px;
+    left:25px;
     font-size:30px;}
     .e{position:absolute;
-    top:2200px;
+    top:2300px;
+    left:25px;
     font-size:30px;}
     .image1{position:absolute;
     top:50px;
@@ -134,6 +139,31 @@ height:20%;}
 max-width:20%;
 max-height:20%;
 height:20%;}
+.l{position:absolute;
+    top:2100px;
+    left:10px;
+max-width:22%;
+max-height:22%;
+height:22%;}
+.l2{position:absolute;
+    top:1900px;
+    left:10px;
+max-width:22%;
+max-height:22%;
+height:22%;}
+.xxs{position:absolute;
+    top:1750px;
+    left:10px;
+max-width:18%;
+max-height:18%;
+height:18%;}
+.analogy{position:absolute;
+    top:2350px;
+    left:10px;
+max-width:80%;
+max-height:80%;
+height:80%;}
+
 </style>
 <body>
     <div class="a">PlanA: Color</div>
@@ -164,7 +194,11 @@ height:20%;}
 
 
     <div class="d">PlanD: Size</div>
+    <img class="l" src="./Part4 Images/sharp.png">
+    <img class="l2" src="./Part4 Images/l2.png">
+    <img class="xxs" src="./Part4 Images/Crystal7.PNG">
 
     <div class="e">PlanE: Analogy subjects</div>
+    <img class="analogy" src="./Part4 Images/analogy.jpg">
 
 </body>
