--- a/Project3/Project3-Part4.html
+++ b/Project3/Project3-Part4.html
@@ -198,7 +198,7 @@ height:80%;}
     <img class="l2" src="./Part4 Images/l2.png">
     <img class="xxs" src="./Part4 Images/Crystal7.PNG">
 
-    <div class="e">PlanE: Analogy subjects</div>
+    <div class="e">PlanE: Analogy objects</div>
     <img class="analogy" src="./Part4 Images/analogy.jpg">
 
 </body>
