--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
       <div class="Project">Assignment</div>
       <div class="Assignment1"><a href="http://127.0.0.1:5500/Assignment1/mainpage.html">Assignment1</a></div>
       <div class="description3">In this project, we have to use different platforms to <br/>tell a story smoothly.</div>
-      <div class="Research">Research</div>
+      <div class="Research">Project</div>
+      <div class="Project1"><a href="https://yuntongchen.github.io/Assignment1/mainpage.html">Project1</a></div>
+      <div class="Project2"><a href="https://yuntongchen.github.io/Project2/Final.html">Project2</a></div>
       <div class="Assignment2"><a href="https://yuntongchen.github.io/Assignment2/assignment2.html">Assignment2</div></a>
       <div class="description4">In this Assignment, we were asked to create our own typeface <br/>speciement including character set and different sizes, styles <br/>and weight of the font.</div>
       <div class="Assignment3"><a href="https://yuntongchen.github.io/Assignment3/assignment3.html">Assignment3</div></a>
       <div class="Assignment4"><a href="https://yuntongchen.github.io/Assignment4/Assignemnt4.html">Assignment4</div></a>
       <div class="Assignment5"><a href="https://yuntongchen.github.io/Assignment5/Assignment5.html">Assignment5</div></a>
       <div class="Assignment6"><a href="https://yuntongchen.github.io/Assignment6/Assignment6.html">Assignment6</div></a>
+      <div class="Assignment6b"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment6(2)</div></a>
   </body>
