--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div class="Project2"><a href="https://yuntongchen.github.io/Project2/Final.html">Project2</a></div>
       <div class="Assignment2"><a href="https://yuntongchen.github.io/Assignment2/assignment2.html">Assignment2</div></a>
       <div class="description4">In this Assignment, we were asked to create our own typeface <br/>speciement including character set and different sizes, styles <br/>and weight of the font.</div>
-      <div class="Assignment3"><a href="https://yuntongchen.github.io/Assignment3/assignment3.html">Assignment3</div></a>
-      <div class="Assignment4"><a href="https://yuntongchen.github.io/Assignment4/Assignemnt4.html">Assignment4</div></a>
-      <div class="Assignment5"><a href="https://yuntongchen.github.io/Assignment5/Assignment5.html">Assignment5</div></a>
-      <div class="Assignment6"><a href="https://yuntongchen.github.io/Assignment6/Assignment6.html">Assignment6</div></a>
-      <div class="Assignment6b"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment6(2)</div></a>
+      <div class="Assignment3"><a href="https://yuntongchen.github.io/Assignment3/assignment3.html">Workshop-Movie poster</div></a>
+      <div class="Assignment4"><a href="https://yuntongchen.github.io/Assignment4/Assignemnt4.html">Assignment3</div></a>
+      <div class="Assignment5"><a href="https://yuntongchen.github.io/Assignment5/Assignment5.html">Assignment4</div></a>
+      <div class="Assignment6"><a href="https://yuntongchen.github.io/Assignment6/Assignment6.html">Assignment5</div></a>
+      <div class="Assignment6b"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment5(2)</div></a>
   </body>
