--- a/Project3/Project3_Part6(3).html
+++ b/Project3/Project3_Part6(3).html
@@ -26,7 +26,7 @@ font-size:20px;}
 <body>
 <img class="image3" src="./Part6 Images/ice stairs.png">
 <a href="./Project3_Part6(2).html"><img class="image2" src="./Part6 Images/mountain2.png"></a>
-<div class="scene3">went down the steep ice stairs</div>
+<div class="scene3">went down the steep ice stairs...</div>
 </body>
 
 <script>
