--- a/Project3/Project3_Part6(2).html
+++ b/Project3/Project3_Part6(2).html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 </head>
 <style>
@@ -53,3 +53,4 @@ font-size:20px;}
 <script>
 
 </script>
+</html>
