--- a/Project3/Project3_Part6(3).html
+++ b/Project3/Project3_Part6(3).html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 </head>
 <style>
@@ -32,3 +32,4 @@ font-size:20px;}
 <script>
 
 </script>
+</html>
