--- a/index.html
+++ b/index.html
@@ -29,4 +29,5 @@
       <div class="Assignment5"><a href="https://yuntongchen.github.io/Assignment5/Assignment5.html">Assignment4</div></a>
       <div class="Assignment6"><a href="https://yuntongchen.github.io/Assignment6/Assignment6.html">Assignment5</div></a>
       <div class="Assignment6b"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment5(2)</div></a>
+      <div class="Assignment7"><a href="https://yuntongchen.github.io/Assignment8/Assignment8.html">Assignment6</div></a>
   </body>
