--- a/Assignment9/Assignment9.html
+++ b/Assignment9/Assignment9.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Core 2: Interaction Lab / Demonstration 5</title>
-    <link rel="stylesheet" type="text/css" href="./Assignment9.css" />
+    <link rel="stylesheet" type="text/css" href="./Assignment9.html" />
     <script src="./Assignment9.js" type="text/javascript" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans:wght@300;400&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
 </head>
 <body>
 <main id="app">
-    <div id="information">
-    <div id="crystal"></div>
-    
+        <h1>Crystal</h1>
+    <p>This is a crystal collection with different shapes, colors and textures.</p>
+    <div id="Crystal">
+
     </div>
 </main>
 </body>
