--- a/Project3/Project3_Part7.html
+++ b/Project3/Project3_Part7.html
@@ -20,6 +20,10 @@
 <div class="scene1c">the</div>
 <div class="scene1d">moun</div>
 <div class="scene1e">tain</div>
+<div class="scene2">Went</div>
+<div class="scene2a">through</div>
+<div class="scene2b">the</div>
+<div class="scene2c">glacier</div>
 
 <main id="app"> 
 <div id="Crystal">
