--- a/Project3/Project3_Part7.html
+++ b/Project3/Project3_Part7.html
@@ -10,16 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans:wght@300;400&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
 </head>
 <body>
-<img class="mountain1" src="./Part7 Images/mountain1-03.png">
+<img class="mountain3" src="./Part7 Images/mountain3-03.png">
 <img class="mountain2" src="./Part7 Images/mountain2.png">
+<img class="mountain1" src="./Part7 Images/mountain1-03.png">
 <img class="glacier" src="./Part7 Images/glacier-03.png">
 <img class="glacier2" src="./Part7 Images/glacier2.png">
+<img class="glacier3" src="./Part7 Images/crystal3-03.png">
+<img class="glacier4" src="./Part7 Images/glacier4-03.png">
 <div class="scene1">He</div>
 <div class="scene1a">climbed</div>
 <div class="scene1b">over</div>
 <div class="scene1c">the</div>
-<div class="scene1d">moun</div>
-<div class="scene1e">tain</div>
+<div class="scene1d">mountain</div>
 <div class="scene2">Went</div>
 <div class="scene2a">through</div>
 <div class="scene2b">the</div>
