--- a/Assignment9/Assignment9.html
+++ b/Assignment9/Assignment9.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./Assignment9.html" />
+    <link rel="stylesheet" type="text/css" href="./Assignment9.css" />
     <script src="./Assignment9.js" type="text/javascript" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans:wght@300;400&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
 </head>
@@ -13,8 +13,12 @@
 <main id="app">
         <h1>Crystal</h1>
     <p>This is a crystal collection with different shapes, colors and textures.</p>
-    <div id="Crystal">
+    <div id="Crystal"></div>
 
-    </div>
+        <div id="users"></div>
+        <button id="map">Show Credit in Dollars</button>
+        <button id="authenticated">Filter for Authenticated Users</button>
+        <button id="sort-ascending">Sort by First Name (Ascending)</button>
+        <button id="sort-descending">Sort by First Name (Descending)</button>
 </main>
 </body>
