--- a/Project3/Project3_Part7.html
+++ b/Project3/Project3_Part7.html
@@ -12,11 +12,14 @@
 <body>
 <img class="mountain3" src="./Part7 Images/mountain3-03.png">
 <img class="mountain2" src="./Part7 Images/mountain2.png">
-<img class="mountain1" src="./Part7 Images/mountain1-03.png">
+<a href="https://yuntongchen.github.io/Project3/Project3_Part7(2).html"><img class="mountain1" src="./Part7 Images/mountain1-03.png"></a>
+<img class="glacier4" src="./Part7 Images/glacier4-03.png">
 <img class="glacier" src="./Part7 Images/glacier-03.png">
 <img class="glacier2" src="./Part7 Images/glacier2.png">
 <img class="glacier3" src="./Part7 Images/crystal3-03.png">
-<img class="glacier4" src="./Part7 Images/glacier4-03.png">
+<img class="icestairs" src="./Part7 Images/ice stairs-03.png">
+<img class="icestairs2" src="./Part7 Images/ice stairs2-03.png">
+<img class="icestairs3" src="./Part7 Images/ice stairs3-03.png">
 <div class="scene1">He</div>
 <div class="scene1a">climbed</div>
 <div class="scene1b">over</div>
@@ -26,6 +29,7 @@
 <div class="scene2a">through</div>
 <div class="scene2b">the</div>
 <div class="scene2c">glacier</div>
+
 
 <main id="app"> 
 <div id="Crystal">
