--- a/Assignment9/Assignment10.html
+++ b/Assignment9/Assignment10.html
@@ -14,8 +14,8 @@
 <body>
     <main id="app">
         <div id="map"></div>
-        <button id="negative-energy" >Negative Energy</button>
-        <button id="positive-energy">Positive Energy</button>
+        <button id="negative" >Negative Energy</button>
+        <button id="positive">Positive Energy</button>
         <button id="neutral">Neutral</button>
     </main>
 </body>
