--- a/Assignment9/Assignment10.html
+++ b/Assignment9/Assignment10.html
@@ -12,11 +12,14 @@
 </head>
 
 <body>
+    <div class="question">Hello, how's your day?</div>
     <main id="app">
-        <div id="map"></div>
-        <button id="negative" >Negative Energy</button>
-        <button id="positive">Positive Energy</button>
-        <button id="neutral">Neutral</button>
+      <span id="name"></span>
+      <span id="verb"></span>
+      <span id="adjective"></span>
+      <span id="noun"></span>
+
+      </div>
     </main>
 </body>
 
