--- a/Assignment9/Assignment10.html
+++ b/Assignment9/Assignment10.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="question">Hello, how's your day?</div>
-    <main id="app">
+    <main class="wowcolors" id="app">
       <span id="name"></span>
       <span id="verb"></span>
       <span id="adjective"></span>
