--- a/Assignment9/Assignment10.html
+++ b/Assignment9/Assignment10.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-    <div class="question">Hello, how's your day?</div>
+    <div class="question">Welcome back! How's your day?</div>
     <main class="wowcolors" id="app">
       <span id="name"></span>
       <span id="verb"></span>
       <span id="adjective"></span>
       <span id="noun"></span>
+      <span>.</span>
 
       </div>
     </main>
