--- a/Workshop4.html/Workshop4.html
+++ b/Workshop4.html/Workshop4.html
@@ -14,9 +14,14 @@
 <body>
     <main id="app">
         <div id="users"></div>
-        <button id="name">Sort by First Name (Descending)</button>
-        <button id="description">Description</button>
-        <button id="attack">Attack</button>
+        <div>
+        <button id="namedescending">Sort by First Name (Descending)</button>
+        <button id="descriptionascending">Description (Ascending)</button>
+        <button id="attackbigger">Attack (bigger than 100)</button>
+        <button id="attackdollars">Attack as Dollars</button>
+        <button id="attackascending">Attack (Ascending)</button>
+
+        </div>
     </main>
 </body>
 
