--- a/index.html
+++ b/index.html
@@ -31,4 +31,5 @@
       <div class="Assignment6b"><a href="https://yuntongchen.github.io/Assignment6/Assignment6(2).html">Assignment5(2)</div></a>
       <div class="Assignment7"><a href="https://yuntongchen.github.io/Assignment8/Assignment8.html">Assignment6</div></a>
       <div class="Assignemnt8"><a href="https://yuntongchen.github.io/Assignment9/Assignment10.html">Assignment7</div></a>
+      <div class="Workshop4"><a href="https://yuntongchen.github.io/Workshop4.html/">Workshop4</div></a>
   </body>
