--- a/Project3/Project3_Part7(2).html
+++ b/Project3/Project3_Part7(2).html
@@ -12,8 +12,15 @@
 <body>
     
     <main id="app"> 
-        <div id="Crystal">
-        </div>
+        <div id="Crystal"></div>
+        <span id="MountainTwo"></span>
+        <span id="MountainThree"></span>
         </main>
+    <div class="button" id="users">
+      <button onclick="clickImg(All)" class="AllImages">All</button> 
+      <button onclick="clickImg(Mountain1)" class="Mountain">Mountain1</button>
+      <button onclick="clickImg(Mountain2)" class="Mountain2Images">Mountain2</button>
+      <button onclick="clickImg(Mountain3)" class="Mountain3Images">Mountain3</button>
+    </div>
 </body>
 </html>
