--- a/Project3/Project3_Part7(2).html
+++ b/Project3/Project3_Part7(2).html
@@ -17,4 +17,7 @@
         <span id="MountainThree"></span>
         </main>
 
+        <div id="scroll-container">
+            <div class="scroll-text" id="scroll">Seperate Version-><div>
+          </div>
     </body>
