--- a/Project3/Project3_Part7(3).html
+++ b/Project3/Project3_Part7(3).html
@@ -15,5 +15,9 @@
         <div id="Crystal">
         </div>
         </main>
+
+        <div id="scroll-container">
+            <div class="scroll-text" id="scroll">Treasure Hunt-><div>
+          </div>
 </body>
 </html>
