--- a/Project3/Project3_Part7.html
+++ b/Project3/Project3_Part7.html
@@ -37,6 +37,8 @@
 <div class="scene3c">steep</div>
 <div class="scene3d">ice</div>
 <div class="scene3e">stairs</div>
+<p>About <span class="extra"><br/><br/>Picture Collection: Amanda Guo 
+    <br/><br/>Web Design:Yuntong Chen</span></p>
 <div class="sign">
     <span class="fast-flicker">Look</span ><span class="what">what</span><span class="flicker">we</span><span class="found">found</span>
   </div>
@@ -47,6 +49,6 @@
     <div class="scroll-text" id="scroll">Treasure Hunt-><div>
   </div>
     
-</div>
+
 </main>
 </body>
