--- a/Assignment9/Assignment10.html
+++ b/Assignment9/Assignment10.html
@@ -10,8 +10,11 @@
     <!--  -->
     <script src="./Assignment10.js" type="text/javascript" defer></script>
 </head>
-
+<style>
+*{cursor: help;}
+</style>
 <body>
+   <div id="bgColors"></div>
     <div class="question">Welcome back! How's your day?</div>
     <main class="wowcolors" id="app">
       <span id="name"></span>
@@ -19,9 +22,8 @@
       <span id="adjective"></span>
       <span id="noun"></span>
       <span>.</span>
-
       </div>
     </main>
+    <span class="refresh" onClick="window.location.reload()">&#8635;</span>
 </body>
-
 </html>
