--- a/Assignment9/Assignment9.html
+++ b/Assignment9/Assignment9.html
@@ -9,6 +9,8 @@
     <script src="./Assignment9.js" type="text/javascript" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500&family=EB+Garamond&family=IBM+Plex+Sans+Thai+Looped:wght@200;400&family=Noto+Sans:wght@300;400&family=Roboto+Slab&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
 </head>
+<style>
+</style>
 <body>
 <main id="app">
         <h1>Crystal</h1>
